--- a/CoffeeMapper/packages.config
+++ b/CoffeeMapper/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MaterialDesignColors" version="1.1.2" targetFramework="net452" />
   <package id="MaterialDesignThemes" version="2.3.0.823" targetFramework="net452" />
+  <package id="MouseKeyHook" version="5.4.0" targetFramework="net452" />
 </packages>
