Improved notification images

--- a/CoffeeMapper/CoffeeMapper.csproj
+++ b/CoffeeMapper/CoffeeMapper.csproj
@@ -152,7 +152,9 @@
     </Resource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="CoffeeMapper_EXE.ico" />
+    <Resource Include="CoffeeMapper_EXE.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="data\CoffeeMapper_Activated.png">
