--- a/CoffeeMapper/CoffeeMapper.csproj
+++ b/CoffeeMapper/CoffeeMapper.csproj
@@ -88,6 +88,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Domain\VersionControl.cs" />
     <Compile Include="Domain\XMLParser.cs" />
     <Page Include="CoffeeOverlay.xaml">
       <SubType>Designer</SubType>
@@ -173,6 +174,17 @@
     <Resource Include="data\blank.cur">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\banner_off.png" />
+    <Resource Include="Resources\banner_on.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\icon_text.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\icon.png" />
+    <Resource Include="Resources\icon_RED.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
