--- a/CoffeeMapper/CoffeeMapper.csproj
+++ b/CoffeeMapper/CoffeeMapper.csproj
@@ -90,6 +90,9 @@
     </ApplicationDefinition>
     <Compile Include="Domain\VersionControl.cs" />
     <Compile Include="Domain\XMLParser.cs" />
+    <Compile Include="Views\Mappings.xaml.cs">
+      <DependentUpon>Mappings.xaml</DependentUpon>
+    </Compile>
     <Page Include="CoffeeOverlay.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -111,6 +114,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\Mappings.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MouseCursor.cs" />
